--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,12 @@
-Package: rteopendata
-Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
-LazyData: TRUE
+Package: opendatarte
+Encoding: UTF-8
+Title: opendatarte
+Version: 0.0.0.9000
+Authors@R: person("Christophe", "Dervieux",
+    email = "christophe.dervieux@gmail.com",
+    role = c("aut", "cre"))
+Description: This package is R Client to RTE API of data.rte-france.com and opendata.rte-france.com. It contains
+    tools and functions to connect to the API and retrieves the data
+Depends: R (>= 3.3.0)
+License: file LICENSE
+LazyData: true
