--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,12 @@ Version: 0.0.0.9000
 Authors@R: person("Christophe", "Dervieux",
     email = "christophe.dervieux@gmail.com",
     role = c("aut", "cre"))
-Description: This package is R Client to RTE API of data.rte-france.com and opendata.rte-france.com. It contains
-    tools and functions to connect to the API and retrieves the data
-Depends: R (>= 3.3.0)
+Description: This package is R Client to RTE API of data.rte-france.com and
+    opendata.rte-france.com. It contains tools and functions to connect to the API
+    and retrieves the data
+Depends:
+    R (>= 3.3.0)
 License: file LICENSE
+Remotes: github::cderv/httr@client_credential_grant
 LazyData: true
+RoxygenNote: 5.0.1
