change token mechanism

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,6 @@ export(call_api)
 export(datarte_auth)
 export(datarte_token)
 export(get_current_token)
+export(is_token)
 export(is_token_available)
-export(is_token_datarte)
 export(unavailabilityAPI)
