--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,6 @@ Description: This package is R Client to RTE API of data.rte-france.com and
 Depends:
     R (>= 3.3.0)
 License: file LICENSE
-Remotes: github::cderv/httr@client_credential_grant
 LazyData: true
 RoxygenNote: 6.1.1
 Imports:
@@ -22,3 +21,5 @@ Imports:
 Suggests: 
     testthat
 Roxygen: list(markdown = TRUE)
+URL: https://github.com/cderv/opendatarte
+BugReports: https://github.com/cderv/opendatarte/issues
