--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Description: This package is R Client to RTE API of data.rte-france.com and
     and retrieves the data
 Depends:
     R (>= 3.3.0)
-License: file LICENSE
+License: GPL-3
 LazyData: true
 RoxygenNote: 6.1.1
 Imports:
