only refer to data.rte-france.com

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Version: 0.0.0.9000
 Authors@R: person("Christophe", "Dervieux",
     email = "christophe.dervieux@gmail.com",
     role = c("aut", "cre"))
-Description: This package is R Client to RTE API of data.rte-france.com and
-    opendata.rte-france.com. It contains tools and functions to connect to the API
+Description: This package is R Client to RTE API of data.rte-france.com. 
+    It contains tools and functions to authenticate to the API
     and retrieves the data
 Depends:
     R (>= 3.3.0)
